tests/skipjob/cloudsql-auth-proxy-job/skipjob.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: SKIPJob
metadata:
  name: randomjob
spec:
  container:
    image: "perl:5.34.0"
    command:
      - "perl"
      - "-Mbignum=bpi"
      - "-wle"
      - "print bpi(2000)"
    gcp:
      cloudSqlProxy:
        connectionName: test-project-bda1:europe-north1:pg-01-test
        serviceAccount: my-sa@test-project-bda1.iam.gserviceaccount.com
        ip: 10.0.0.1
