tests/skipjob/cloudsql-auth-proxy-job/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: cloudsql-auth-proxy
spec:
  skip: false
  concurrent: true
  skipDelete: false
  steps:
    - try:
        - create:
            file: skipjob.yaml
        - assert:
            file: skipjob-assert.yaml
